Fixes #1437: containerCssClass is replaced with selectionCssClass; select2 is retrieved via webjars